fixed scrollbar issue

--- a/client/src/app/weather-card-today/weather-card-today.component.css
+++ b/client/src/app/weather-card-today/weather-card-today.component.css
@@ -234,7 +234,7 @@ form {
   overflow-y: hidden;
 }
 ::-webkit-scrollbar {
-  width: 18px;
+  height: 3px;
   background-color: #F5F5F5;
 }
 ::-webkit-scrollbar-track {
